@@ -47,6 +47,7 @@ sub proxy  {
     parent => $self,
     logger => $self->logger,
     debug  => $arg->{debug},
+    muted  => $arg->{muted},
     proxy_prefix => $arg->{proxy_prefix},
   });
 }
@@ -67,6 +68,19 @@ sub get_debug {
   return $_[0]->parent->get_debug;
 }
 
+sub mute   { $_[0]{muted} = 1 }
+sub unmute { $_[0]{muted} = 0 }
+
+sub set_muted    { $_[0]{muted} = $_[1] ? 1 : 0 }
+sub clear_muted  { undef $_[0]{muted} }
+
+sub _get_local_muted { $_[0]{muted} }
+
+sub get_muted {
+  return $_[0]{muted} if defined $_[0]{muted};
+  return $_[0]->parent->get_muted;
+}
+
 sub _get_all_prefix {
   my ($self, $arg) = @_;
 
@@ -80,6 +94,9 @@ sub _get_all_prefix {
 sub log {
   my ($self, @rest) = @_;
   my $arg = _HASH0($rest[0]) ? shift(@rest) : {};
+
+  return if $self->_get_local_muted and ! $arg->{fatal};
+
   local $arg->{prefix} = $self->_get_all_prefix($arg);
 
   $self->parent->log($arg, @rest);
@@ -89,9 +106,9 @@ sub log_fatal {
   my ($self, @rest) = @_;
 
   my $arg = _HASH0($rest[0]) ? shift(@rest) : {};
-  local $arg->{prefix} = $self->_get_all_prefix($arg);
+  local $arg->{fatal}  = 1;
 
-  $self->parent->log_fatal($arg, @rest);
+  $self->log($arg, @rest);
 }
 
 sub log_debug {
@@ -101,15 +118,9 @@ sub log_debug {
   return if defined $debug and ! $debug;
 
   my $arg = _HASH0($rest[0]) ? shift(@rest) : {};
-  local $arg->{prefix} = $self->_get_all_prefix($arg);
+  local $arg->{level} = 'debug';
 
-  if ($debug) {
-    local $arg->{level} = 'debug';
-    $self->parent->log($arg, @rest);
-    return;
-  }
-
-  $self->parent->log_debug($arg, @rest);
+  $self->log($arg, @rest);
 }
 
 1;
